Fix sidebar on iOS

--- a/docgenerator/media/styles.css
+++ b/docgenerator/media/styles.css
@@ -87,13 +87,16 @@ thead th {
 
 /* Custom styles */
 
+
+html,
 body {
-    position: relative; /* For .sidenav */
+    height: 100%;
 }
 
 .content {
+    position: relative; /* For .sidenav */
+    min-height: 100%;
     display: flex;
-    flex-wrap: wrap;
 }
 main {
     margin-top: 30px;
@@ -222,6 +225,6 @@ main {
         z-index: 1;
         position: absolute;
         transform: translateX(0%);
-        height: 100%;
+        min-height: 100%;
     }
 }
